<resources>
    <string name="app_name" translatable="false">TWINS</string>
    <string name="play" translatable="false">PLAY</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="start" translatable="false">Start</string>
    <string name="score" translatable="false">Score</string>
    <string name="finalizar">Finalizar</string>
    <string name="scores" translatable="false">Scores</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="advertencia">Advertencia</string>
    <string name="texto_advertencia">Estas a punto de finalizar la partida. No se guardara tu progreso, ¿estas seguro?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <string name="top_scores">TOP 3 PUNTUACIONES</string>
    <string name="zero" translatable="false">0</string>
    <string name="puntos">Puntos: </string>
    <string name="puntuacion">PUNTUACIÓN</string>
    <string name="juego_estandar">Juego Estandar</string>
    <string name="juego_libre">Juego Libre</string>
    <string name="niveles">Niveles</string>
    <string name="desafios">Desafios</string>
    <string name="atras">Atrás</string>
    <string name="jugar_modo_juego">Modos de juego</string>
    <string name="jugar_tipo_partida">Jugar por Tipo de partida</string>
    <string name="opciones">Opciones</string>
    <string name="gameover">HAS PERDIDO</string>
    <string name="elige_baraja">Elige tu baraja:</string>
    <string name="sonido">Sonido:</string>
    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>
    <string name="puntos_0">Puntos: 0</string>
    <string name="premio">PREMIO</string>
    <string name="extra">Extra:</string>
    <string name="tiempo_perfecto">TIEMPO JUSTO</string>
    <string name="partida_perfecta">PARTIDA PERFECTA</string>
    <string name="dos_barajas">DOS BARAJAS</string>
    <string name="logIn" translatable="false">LOG IN</string>
    <string name="signin_other_error">Error al intentar entrar en la cuenta</string>
    <string name="logOut" translatable="false">LOG OUT</string>
    <string name="idioma">Idioma:</string>
    <string name="en">Ingles</string>
    <string name="es">Español</string>
    <string name="pt">Portugues</string>
    <string name="fr">Francés</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="carta_especial">Carta especial</string>
    <string name="val">Valenciano</string>
    <string name="desafios_superados">Desafíos superados: </string>
    <string name="puntuacion_total">Puntuación total acumulada: </string>
    <string name="puntos_extra">Puntos extra</string>
    <string name="bienvenido">Bienvenido </string>
</resources>
