<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/gameStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/premio"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
            android:textColor="@color/grey"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/starsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BBDAFF"
            android:gravity="center"
            android:text="@string/carta_especial"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/extra"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/extraPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puntos_extra"
                    android:textSize="32sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/cerrar"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button"/>

    <ImageView
        android:id="@+id/cardWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelButton"
        android:layout_below="@+id/gameStars"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/challengecard1" />
</RelativeLayout>