<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamebackground" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_standarGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="playStandardGame"
            android:text="@string/juego_estandar"
            android:textColor="@color/colorText"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button android:id="@+id/button_casualGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="playCasualGame"
            android:textColor="@color/colorText"
            android:text="@string/juego_libre"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_levelsGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="openLevelsLayout"
            android:text="@string/niveles"
            android:textColor="@color/colorText"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <Space
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_challengeGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="openChallengeLayout"
            android:text="@string/desafios"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorText" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>