<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/gameStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gameover"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
            android:textSize="30sp"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/textview_smileys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameStars"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/gameScore"
        android:layout_marginTop="0dp"
        android:background="#BBDAFF"
        android:gravity="center"
        android:text="@string/top_scores"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listview_scoreList"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_above="@id/button_cancel"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/cerrar"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button"/>
</RelativeLayout>